examples/type_system/failing/72_hm_match_known_type_compile_mismatch.flx
fn expect_int(x: Int) -> Int {
    x
}

fn choose(flag: Bool) -> String {
    match flag {
        true -> "yes",
        false -> "no",
        _ -> "maybe",
    }
}

fn main() -> Unit with IO {
    print(to_string(expect_int(choose(true))))
}
